added full readme + fixes errors and env vars

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,14 +1,10 @@
 # Stripe public key
 REACT_APP_PUBLIC_KEY=
 
-# Stripe Prices required go to your Stripe dashbord
+# Your host: or use 'http://localhost:3000' in development or your 'http://your-heroku-app' in production.
+REACT_APP_API_URL = 'http://localhost:8000'
+
+# Stripe Prices id required!.
+go to your Stripe dashbord
 to create your own prices.
 
-# Stripe Products Prices
-REACT_APP_PRODUCT_PRICE_ID=
-REACT_APP_PRODUCT_PRICE_ID2=
-REACT_APP_PRODUCT_PRICE_ID3=
-REACT_APP_PRODUCT_PRICE_ID4=
-
-# Your host
-REACT_APP_API_URL = 'http://localhost:8000'
