--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,7 @@
 
 # Django Keys
 SECRET_KEY=
-DEBUG=
+DEBUG=True
 
 # User Email Required in order to send emails.
 EMAIL_HOST_USER=
@@ -10,7 +10,8 @@ EMAIL_HOST_PASSWORD=
 # Heroku database url.
 DATABASE_URL=
 
-# Heroku host 
+# Your allowed hosts.
 HEROKU_HOST=
-
 LOCAL_HOST=127.0.0.1
+
+
